Skeleton Loading fixes

--- a/src/components/00-settings/_colors.scss
+++ b/src/components/00-settings/_colors.scss
@@ -109,6 +109,8 @@ $regular-epsilon: #56d3c2;
 $regular-zeta: #c4f0eb;
 $regular-eta: #f2fffd;
 
+
+
 $regular-beige: #e6e2aa;
 $regular-black: #131819;
 $regular-blue: #039be5;
@@ -189,6 +191,8 @@ $secondary-darker: #006758;
 $secondary: #009884;
 $secondary-light: #56d3c2;
 $secondary-lighter: #c4f0eb;
+$skeleton-color: linear-gradient(to left, $light-grey, $sapphire-light);
+$skeleton-color-arabic: linear-gradient(to right, $light-grey, $sapphire-light);
 
 // $color-black:#333333;
 // $color-dark-blue:#194968;
