--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -84,6 +84,14 @@ $marginContainers: 15px;
         padding-left: 0;
         padding-right: 15px;
       }
+
+      .carousel {
+        .is-loading {
+          display: block;
+        }
+      }
+
+
     }
 
     .section-title {
@@ -110,6 +118,13 @@ $marginContainers: 15px;
 
       .section-title {
         margin-bottom: 10px;
+      }
+
+      .is-loading {
+        i {
+          color: transparent;
+          -webkit-text-fill-color: transparent;
+        }
       }
     }
 
@@ -151,6 +166,10 @@ $marginContainers: 15px;
   [id*='CovidSection'] {
     .section {
       margin: 30px 0;
+
+      .is-loading {
+        display: block;
+      }
     }
   }
 
