--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -87,6 +87,7 @@ $marginContainers: 15px;
 
       .carousel {
         .is-loading {
+          border-radius: 10px;
           display: block;
         }
       }
