information card icond loading adjust

--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -127,6 +127,12 @@ $marginContainers: 15px;
           -webkit-text-fill-color: transparent;
         }
       }
+
+      .card-icon__icon {
+        [id*='Content'] {
+          display: flex;
+        }
+      }
     }
 
     .list {
