--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -174,6 +174,14 @@ $marginContainers: 15px;
     .section {
       margin: 30px 0;
 
+      .daily-badge {
+        [id*='Content'] {
+          align-items: center;
+          display: flex;
+          justify-content: center;
+        }
+      }
+
       .is-loading {
         display: block;
       }
