--- a/src/components/06-helpers/_index.scss
+++ b/src/components/06-helpers/_index.scss
@@ -2,6 +2,7 @@
 @forward 'background';
 @forward 'border';
 @forward 'break-words';
+@forward 'display';
 @forward 'height';
 @forward 'rotate';
 @forward 'rotate';
