--- a/src/components/01-tools/_loading-skeleton.scss
+++ b/src/components/01-tools/_loading-skeleton.scss
@@ -1,36 +1,39 @@
 @use '~Settings/colors'as *;
 
 @keyframes loading {
-  100% {
-    transform: translateX(100%);
-  }
+	100% {
+		transform: translateX(100%);
+	}
 }
 
 .is-loading {
-  //background-color: $light-grey;
-  background-image: linear-gradient(to left, $light-grey, $sapphire-light);
-  border: none;
-  color: transparent;
-  overflow: hidden;
-  position: relative;
+	background-image: linear-gradient(to left, $light-grey, $sapphire-light);
+	border: none;
+	color: transparent;
+	overflow: hidden;
+	position: relative;
 
-  .is-rtl & {
-    background-image: linear-gradient(to right, $light-grey, $sapphire-light);
-  }
+	> * {
+		visibility: hidden;
+	}
 
-  &::after {
-    animation: loading 1.5s infinite;
-    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    transform: translateX(-100%);
-    width: 100%;
-  }
+	.is-rtl & {
+		background-image: linear-gradient(to right, $light-grey, $sapphire-light);
+	}
 
-  +.is-loading {
-    background-color: $light-grey;
-  }
+	&::after {
+		animation: loading 1.5s infinite;
+		background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+		content: '';
+		display: block;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		transform: translateX(-100%);
+		width: 100%;
+	}
+
+	+ .is-loading {
+		background-color: $light-grey;
+	}
 }
