--- a/src/components/06-helpers/_border.scss
+++ b/src/components/06-helpers/_border.scss
@@ -1,108 +1,125 @@
 /*---------- border colors ----------*/
 @use '~Settings/colors'as *;
+@use '~Settings/borders'as *;
 
 .border-red {
-  border-color: $regular-red;
+	border-color: $regular-red;
 }
 
 .border-dark-red {
-  border-color: $dark-red;
+	border-color: $dark-red;
 }
 
 .border-light-red {
-  border-color: $light-red;
+	border-color: $light-red;
 }
 
 .border-violet {
-  border-color: $regular-pink;
+	border-color: $regular-pink;
 }
 
 .border-dark-violet {
-  border-color: $dark-pink;
+	border-color: $dark-pink;
 }
 
 .border-light-violet {
-  border-color: $light-pink;
+	border-color: $light-pink;
 }
 
 .border-blue {
-  border-color: $regular-blue;
+	border-color: $regular-blue;
 }
 
 .border-dark-blue {
-  border-color: $dark-blue;
+	border-color: $dark-blue;
 }
 
 .border-light-blue {
-  border-color: $regular-alpha;
+	border-color: $regular-alpha;
 }
 
 .border-green {
-  border-color: $regular-green;
+	border-color: $regular-green;
 }
 
 .border-dark-green {
-  border-color: $dark-green;
+	border-color: $dark-green;
 }
 
 .border-light-green {
-  border-color: $light-green;
+	border-color: $light-green;
 }
 
 .border-orange {
-  border-color: $regular-orange;
+	border-color: $regular-orange;
 }
 
 .border-dark-orange {
-  border-color: $dark-orange;
+	border-color: $dark-orange;
 }
 
 .border-light-orange {
-  border-color: $light-orange;
+	border-color: $light-orange;
 }
 
 .border-grey {
-  border-color: $regular-grey;
+	border-color: $regular-grey;
 }
 
 .border-dark-grey {
-  border-color: $mid-dark-grey;
+	border-color: $mid-dark-grey;
 }
 
 .border-light-grey {
-  border-color: $mid-light-grey;
+	border-color: $mid-light-grey;
 }
 
 .border-light-grey2 {
-  border-color: $light-grey
+	border-color: $light-grey;
 }
 
 .border-light-grey3 {
-  border-color: $sapphire-light;
+	border-color: $sapphire-light;
 }
 
 .border-white {
-  border-color: $sapphire-white;
+	border-color: $sapphire-white;
 }
 
 .border-black {
-  border-color: $dark-grey;
+	border-color: $dark-grey;
 }
 
 .border-primary-color {
-  border-color: $regular-alpha;
-  /*primary-color*/
+	border-color: $regular-alpha;
 }
 
 /*Class that is being used in the file upload, we should avoid to use this class*/
 .borderImportant {
-  border: 1px solid !important;
+	border: 1px solid !important;
 }
 
 .border-bottom {
-  border-bottom: 1px solid;
+	border-bottom: 1px solid;
 }
 
 .border-light-grey {
-  border-color: $light-grey;
+	border-color: $light-grey;
+}
+
+/* Border Radius */
+.border-radius-none {
+	border-radius: 0;
+}
+
+.border-radius-default {
+	border-radius: $border-radius-default;
+}
+
+.border-radius-medium {
+	border-radius: $border-radius-medium;
+}
+
+.border-radius-large {
+	border-radius: $border-radius-large;
 }
