--- a/src/components/00-settings/_colors.scss
+++ b/src/components/00-settings/_colors.scss
@@ -132,5 +132,5 @@ $gray-darker: #333333;
 $gray-light: #d6d6d6;
 $gray-lighter: #f3f3f3;
 
-$skeleton-color: linear-gradient(to left, $light-grey, $mid-light-grey);
-$skeleton-color-arabic: linear-gradient(to right, $light-grey, $mid-light-grey);
+$skeleton-color: linear-gradient(to left, $light-grey, $sapphire-light);
+$skeleton-color-arabic: linear-gradient(to right, $light-grey, $sapphire-light);
