--- a/src/components/00-settings/_colors.scss
+++ b/src/components/00-settings/_colors.scss
@@ -52,11 +52,11 @@
 // .SapphireDarkBlue      : #30384A - $sapphire-dark-blue
 // .SapphireGreyBlue      : #494F5C - $sapphire-grey-blue
 
-$regular-alpha: #56e39f;
-$regular-beta: #59c9a5;
-$regular-gamma: #5b6c5d;
-$regular-delta: #3b2c35;
-$regular-epsilon: #2a1f2d;
+$regular-alpha: #00bfa5;
+$regular-beta: #009884;
+$regular-gamma: #006758;
+$regular-delta: #00433a;
+$regular-epsilon: #56d3c2;
 $regular-zeta: #c4f0eb;
 $regular-eta: #f2fffd;
 
