--- a/src/components/00-settings/_colors.scss
+++ b/src/components/00-settings/_colors.scss
@@ -52,13 +52,13 @@
 // .SapphireDarkBlue      : #30384A - $sapphire-dark-blue
 // .SapphireGreyBlue      : #494F5C - $sapphire-grey-blue
 
-$regular-alpha: #00bfa5;
-$regular-beta: #009884;
-$regular-gamma: #006758;
-$regular-delta: #00433a;
-$regular-epsilon: #56d3c2;
-$regular-zeta: #c4f0eb;
-$regular-eta: #f2fffd;
+$regular-alpha: #c468f7;
+$regular-beta: #8617c2;
+$regular-gamma: #5d3175;
+$regular-delta: #510e75;
+$regular-epsilon: #ff68f7;
+$regular-zeta: #d89df8;
+$regular-eta: #dfb5f7;
 
 $regular-beige: #e6e2aa;
 $regular-black: #131819;
